gatekeeper/constraints/k8sallowedrepos.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: block-latest-tag
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    # Cấu hình chặn hậu tố ':latest' hoặc không ghi tag (mặc định hiểu là latest)
    repos: ["^.+:(?!latest$)[^:]+$"]
