gatekeeper/constraints/k8srequiredresources.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: container-must-have-limits
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    apiGroups: [""]
    kinds: ["Pod"]
    requiredFiles:
      - limits
    resources:
      - cpu
      - memory
